--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -147,6 +147,7 @@
     "immer": "^10.1.1",
     "interweave": "^13.1.0",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "js-levenshtein": "^1.1.6",
     "js-yaml-loader": "^1.2.2",
     "json-bigint": "^1.0.0",
@@ -255,6 +256,7 @@
     "@types/fetch-mock": "^7.3.2",
     "@types/jest": "^29.5.12",
     "@types/jquery": "^3.5.8",
+    "@types/js-cookie": "^3.0.5",
     "@types/js-levenshtein": "^1.1.3",
     "@types/json-bigint": "^1.0.4",
     "@types/mousetrap": "^1.6.15",
@@ -324,6 +326,7 @@
     "jest-enzyme": "^7.1.2",
     "jest-html-reporter": "^3.10.2",
     "jest-websocket-mock": "^2.5.0",
+    "js-cookie": "^3.0.5",
     "jsdom": "^24.1.1",
     "lerna": "^8.1.7",
     "less": "^4.2.0",
