--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Logging to DockerHub
-        run: echo ${{  }} | docker login -u ${{  }} --password-stdin
+        run: echo ${{ secrets.DOCKERHUB_ACCESS_TOKEN_SNAPSHOT }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME_SNAPSHOT }} --password-stdin
 
       - name: bulding superset image
         run: docker build -t dataflowsnapshot/dataflow-superset:latest
