--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_ACCESS_TOKEN_SNAPSHOT }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME_SNAPSHOT }} --password-stdin
 
       - name: bulding superset image
-        run: docker build -t dataflowsnapshot/dataflow-superset:latest
+        run: docker build -t dataflowsnapshot/dataflow-superset:latest .
 
       - name: pushing superset image
         run: docker push dataflowsnapshot/dataflow-superset:latest
