--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Logging to DockerHub
         run: echo ${{ secrets.DOCKERHUB_ACCESS_TOKEN_SNAPSHOT }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME_SNAPSHOT }} --password-stdin
 
-      - name: Setting SSH Key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: bulding superset image
         run: docker build --ssh default -t dataflowsnapshot/dataflow-superset:latest .
